; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_uhci_pci.c_uhci_pci_match.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_uhci_pci.c_uhci_pci_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [48 x i8] c"Intel 631XESB/632XESB/3100 USB controller USB-1\00", align 1
@.str.1 = private unnamed_addr constant [48 x i8] c"Intel 631XESB/632XESB/3100 USB controller USB-2\00", align 1
@.str.2 = private unnamed_addr constant [48 x i8] c"Intel 631XESB/632XESB/3100 USB controller USB-3\00", align 1
@.str.3 = private unnamed_addr constant [48 x i8] c"Intel 631XESB/632XESB/3100 USB controller USB-4\00", align 1
@.str.4 = private unnamed_addr constant [37 x i8] c"Intel 82371SB (PIIX3) USB controller\00", align 1
@.str.5 = private unnamed_addr constant [40 x i8] c"Intel 82371AB/EB (PIIX4) USB controller\00", align 1
@.str.6 = private unnamed_addr constant [35 x i8] c"Intel 82801AA (ICH) USB controller\00", align 1
@.str.7 = private unnamed_addr constant [36 x i8] c"Intel 82801AB (ICH0) USB controller\00", align 1
@.str.8 = private unnamed_addr constant [46 x i8] c"Intel 82801BA/BAM (ICH2) USB controller USB-A\00", align 1
@.str.9 = private unnamed_addr constant [46 x i8] c"Intel 82801BA/BAM (ICH2) USB controller USB-B\00", align 1
@.str.10 = private unnamed_addr constant [46 x i8] c"Intel 82801CA/CAM (ICH3) USB controller USB-A\00", align 1
@.str.11 = private unnamed_addr constant [46 x i8] c"Intel 82801CA/CAM (ICH3) USB controller USB-B\00", align 1
@.str.12 = private unnamed_addr constant [46 x i8] c"Intel 82801CA/CAM (ICH3) USB controller USB-C\00", align 1
@.str.13 = private unnamed_addr constant [42 x i8] c"Intel 82801DB (ICH4) USB controller USB-A\00", align 1
@.str.14 = private unnamed_addr constant [42 x i8] c"Intel 82801DB (ICH4) USB controller USB-B\00", align 1
@.str.15 = private unnamed_addr constant [42 x i8] c"Intel 82801DB (ICH4) USB controller USB-C\00", align 1
@.str.16 = private unnamed_addr constant [42 x i8] c"Intel 82801EB (ICH5) USB controller USB-A\00", align 1
@.str.17 = private unnamed_addr constant [42 x i8] c"Intel 82801EB (ICH5) USB controller USB-B\00", align 1
@.str.18 = private unnamed_addr constant [42 x i8] c"Intel 82801EB (ICH5) USB controller USB-C\00", align 1
@.str.19 = private unnamed_addr constant [42 x i8] c"Intel 82801EB (ICH5) USB controller USB-D\00", align 1
@.str.20 = private unnamed_addr constant [35 x i8] c"Intel 6300ESB USB controller USB-A\00", align 1
@.str.21 = private unnamed_addr constant [35 x i8] c"Intel 6300ESB USB controller USB-B\00", align 1
@.str.22 = private unnamed_addr constant [52 x i8] c"Intel 82801FB/FR/FW/FRW (ICH6) USB controller USB-A\00", align 1
@.str.23 = private unnamed_addr constant [52 x i8] c"Intel 82801FB/FR/FW/FRW (ICH6) USB controller USB-B\00", align 1
@.str.24 = private unnamed_addr constant [52 x i8] c"Intel 82801FB/FR/FW/FRW (ICH6) USB controller USB-C\00", align 1
@.str.25 = private unnamed_addr constant [52 x i8] c"Intel 82801FB/FR/FW/FRW (ICH6) USB controller USB-D\00", align 1
@.str.26 = private unnamed_addr constant [41 x i8] c"Intel 82801G (ICH7) USB controller USB-A\00", align 1
@.str.27 = private unnamed_addr constant [41 x i8] c"Intel 82801G (ICH7) USB controller USB-B\00", align 1
@.str.28 = private unnamed_addr constant [41 x i8] c"Intel 82801G (ICH7) USB controller USB-C\00", align 1
@.str.29 = private unnamed_addr constant [41 x i8] c"Intel 82801G (ICH7) USB controller USB-D\00", align 1
@.str.30 = private unnamed_addr constant [41 x i8] c"Intel 82801H (ICH8) USB controller USB-A\00", align 1
@.str.31 = private unnamed_addr constant [41 x i8] c"Intel 82801H (ICH8) USB controller USB-B\00", align 1
@.str.32 = private unnamed_addr constant [41 x i8] c"Intel 82801H (ICH8) USB controller USB-C\00", align 1
@.str.33 = private unnamed_addr constant [41 x i8] c"Intel 82801H (ICH8) USB controller USB-D\00", align 1
@.str.34 = private unnamed_addr constant [41 x i8] c"Intel 82801H (ICH8) USB controller USB-E\00", align 1
@.str.35 = private unnamed_addr constant [35 x i8] c"Intel 82801I (ICH9) USB controller\00", align 1
@.str.36 = private unnamed_addr constant [43 x i8] c"Intel 82801JI (ICH10) USB controller USB-A\00", align 1
@.str.37 = private unnamed_addr constant [43 x i8] c"Intel 82801JI (ICH10) USB controller USB-B\00", align 1
@.str.38 = private unnamed_addr constant [43 x i8] c"Intel 82801JI (ICH10) USB controller USB-C\00", align 1
@.str.39 = private unnamed_addr constant [43 x i8] c"Intel 82801JI (ICH10) USB controller USB-D\00", align 1
@.str.40 = private unnamed_addr constant [43 x i8] c"Intel 82801JI (ICH10) USB controller USB-E\00", align 1
@.str.41 = private unnamed_addr constant [43 x i8] c"Intel 82801JI (ICH10) USB controller USB-F\00", align 1
@.str.42 = private unnamed_addr constant [29 x i8] c"Intel 82443MX USB controller\00", align 1
@.str.43 = private unnamed_addr constant [37 x i8] c"Intel 82372FB/82468GX USB controller\00", align 1
@.str.44 = private unnamed_addr constant [39 x i8] c"HP iLO Standard Virtual USB controller\00", align 1
@.str.45 = private unnamed_addr constant [26 x i8] c"VIA 83C572 USB controller\00", align 1
@PCIC_SERIALBUS = common dso_local global i64 0, align 8
@PCIS_SERIALBUS_USB = common dso_local global i64 0, align 8
@PCI_INTERFACE_UHCI = common dso_local global i64 0, align 8
@.str.46 = private unnamed_addr constant [30 x i8] c"UHCI (generic) USB controller\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @uhci_pci_match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @uhci_pci_match(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @pci_get_devid(i32 %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  switch i32 %7, label %59 [
    i32 646480006, label %8
    i32 646545542, label %9
    i32 646611078, label %10
    i32 646676614, label %11
    i32 1881178246, label %12
    i32 1897037958, label %13
    i32 605192326, label %14
    i32 606240902, label %15
    i32 608338054, label %16
    i32 608469126, label %17
    i32 612532358, label %18
    i32 612663430, label %19
    i32 612860038, label %20
    i32 616726662, label %21
    i32 616857734, label %22
    i32 617054342, label %23
    i32 617775238, label %24
    i32 617906310, label %25
    i32 618102918, label %26
    i32 618561670, label %27
    i32 631865478, label %28
    i32 631931014, label %29
    i32 643334278, label %30
    i32 643399814, label %31
    i32 643465350, label %32
    i32 643530886, label %33
    i32 667451526, label %34
    i32 667517062, label %35
    i32 667582598, label %36
    i32 667648134, label %37
    i32 674267270, label %38
    i32 674332806, label %39
    i32 674398342, label %40
    i32 674529414, label %41
    i32 674594950, label %42
    i32 691306630, label %43
    i32 691372166, label %44
    i32 691437702, label %45
    i32 691503238, label %46
    i32 691568774, label %47
    i32 691634310, label %48
    i32 976519302, label %49
    i32 976584838, label %50
    i32 976650374, label %51
    i32 976715910, label %52
    i32 976781446, label %53
    i32 976846982, label %54
    i32 1905950854, label %55
    i32 1979875462, label %56
    i32 855642172, label %57
    i32 808980742, label %58
  ]

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %77

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %77

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %77

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %77

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %77

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %77

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %77

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %77

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %77

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %77

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %77

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %77

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %77

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %77

22:                                               ; preds = %1
  store i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.14, i64 0, i64 0), i8** %2, align 8
  br label %77

23:                                               ; preds = %1
  store i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.15, i64 0, i64 0), i8** %2, align 8
  br label %77

24:                                               ; preds = %1
  store i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.16, i64 0, i64 0), i8** %2, align 8
  br label %77

25:                                               ; preds = %1
  store i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.17, i64 0, i64 0), i8** %2, align 8
  br label %77

26:                                               ; preds = %1
  store i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.18, i64 0, i64 0), i8** %2, align 8
  br label %77

27:                                               ; preds = %1
  store i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.19, i64 0, i64 0), i8** %2, align 8
  br label %77

28:                                               ; preds = %1
  store i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.20, i64 0, i64 0), i8** %2, align 8
  br label %77

29:                                               ; preds = %1
  store i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.21, i64 0, i64 0), i8** %2, align 8
  br label %77

30:                                               ; preds = %1
  store i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.22, i64 0, i64 0), i8** %2, align 8
  br label %77

31:                                               ; preds = %1
  store i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.23, i64 0, i64 0), i8** %2, align 8
  br label %77

32:                                               ; preds = %1
  store i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.24, i64 0, i64 0), i8** %2, align 8
  br label %77

33:                                               ; preds = %1
  store i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.25, i64 0, i64 0), i8** %2, align 8
  br label %77

34:                                               ; preds = %1
  store i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.26, i64 0, i64 0), i8** %2, align 8
  br label %77

35:                                               ; preds = %1
  store i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.27, i64 0, i64 0), i8** %2, align 8
  br label %77

36:                                               ; preds = %1
  store i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.28, i64 0, i64 0), i8** %2, align 8
  br label %77

37:                                               ; preds = %1
  store i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.29, i64 0, i64 0), i8** %2, align 8
  br label %77

38:                                               ; preds = %1
  store i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.30, i64 0, i64 0), i8** %2, align 8
  br label %77

39:                                               ; preds = %1
  store i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.31, i64 0, i64 0), i8** %2, align 8
  br label %77

40:                                               ; preds = %1
  store i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.32, i64 0, i64 0), i8** %2, align 8
  br label %77

41:                                               ; preds = %1
  store i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.33, i64 0, i64 0), i8** %2, align 8
  br label %77

42:                                               ; preds = %1
  store i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.34, i64 0, i64 0), i8** %2, align 8
  br label %77

43:                                               ; preds = %1
  store i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.35, i64 0, i64 0), i8** %2, align 8
  br label %77

44:                                               ; preds = %1
  store i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.35, i64 0, i64 0), i8** %2, align 8
  br label %77

45:                                               ; preds = %1
  store i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.35, i64 0, i64 0), i8** %2, align 8
  br label %77

46:                                               ; preds = %1
  store i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.35, i64 0, i64 0), i8** %2, align 8
  br label %77

47:                                               ; preds = %1
  store i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.35, i64 0, i64 0), i8** %2, align 8
  br label %77

48:                                               ; preds = %1
  store i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.35, i64 0, i64 0), i8** %2, align 8
  br label %77

49:                                               ; preds = %1
  store i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.36, i64 0, i64 0), i8** %2, align 8
  br label %77

50:                                               ; preds = %1
  store i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.37, i64 0, i64 0), i8** %2, align 8
  br label %77

51:                                               ; preds = %1
  store i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.38, i64 0, i64 0), i8** %2, align 8
  br label %77

52:                                               ; preds = %1
  store i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.39, i64 0, i64 0), i8** %2, align 8
  br label %77

53:                                               ; preds = %1
  store i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.40, i64 0, i64 0), i8** %2, align 8
  br label %77

54:                                               ; preds = %1
  store i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.41, i64 0, i64 0), i8** %2, align 8
  br label %77

55:                                               ; preds = %1
  store i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.42, i64 0, i64 0), i8** %2, align 8
  br label %77

56:                                               ; preds = %1
  store i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.43, i64 0, i64 0), i8** %2, align 8
  br label %77

57:                                               ; preds = %1
  store i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.44, i64 0, i64 0), i8** %2, align 8
  br label %77

58:                                               ; preds = %1
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.45, i64 0, i64 0), i8** %2, align 8
  br label %77

59:                                               ; preds = %1
  br label %60

60:                                               ; preds = %59
  %61 = load i32, i32* %3, align 4
  %62 = call i64 @pci_get_class(i32 %61)
  %63 = load i64, i64* @PCIC_SERIALBUS, align 8
  %64 = icmp eq i64 %62, %63
  br i1 %64, label %65, label %76

65:                                               ; preds = %60
  %66 = load i32, i32* %3, align 4
  %67 = call i64 @pci_get_subclass(i32 %66)
  %68 = load i64, i64* @PCIS_SERIALBUS_USB, align 8
  %69 = icmp eq i64 %67, %68
  br i1 %69, label %70, label %76

70:                                               ; preds = %65
  %71 = load i32, i32* %3, align 4
  %72 = call i64 @pci_get_progif(i32 %71)
  %73 = load i64, i64* @PCI_INTERFACE_UHCI, align 8
  %74 = icmp eq i64 %72, %73
  br i1 %74, label %75, label %76

75:                                               ; preds = %70
  store i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.46, i64 0, i64 0), i8** %2, align 8
  br label %77

76:                                               ; preds = %70, %65, %60
  store i8* null, i8** %2, align 8
  br label %77

77:                                               ; preds = %76, %75, %58, %57, %56, %55, %54, %53, %52, %51, %50, %49, %48, %47, %46, %45, %44, %43, %42, %41, %40, %39, %38, %37, %36, %35, %34, %33, %32, %31, %30, %29, %28, %27, %26, %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8
  %78 = load i8*, i8** %2, align 8
  ret i8* %78
}

declare dso_local i32 @pci_get_devid(i32) #1

declare dso_local i64 @pci_get_class(i32) #1

declare dso_local i64 @pci_get_subclass(i32) #1

declare dso_local i64 @pci_get_progif(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
